<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/answer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/question_adapter_title"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/answer_rating_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/answer_textview"
        android:text="@string/question_adapter_rating"
        android:textStyle="italic"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/answer_reply_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer_textview"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/answer_rating_textview"
        android:text="@string/answer_adapter_reply"
        android:textStyle="italic"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/answer_author_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer_textview"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/answer_reply_textview"
        android:text="@string/question_adapter_author"
        android:textStyle="italic"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/answer_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/answer_rating_textview"
        android:text="@string/question_adapter_date"
        android:textSize="12sp"
        android:textStyle="italic" />

</RelativeLayout>

