<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AuthorAnswerActivity" >

    <Button
        android:id="@+id/submitAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_button_text" />

    <Button
        android:id="@+id/add_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitAnswerButton"
        android:layout_alignLeft="@+id/submitAnswerButton"
        android:layout_alignRight="@+id/submitAnswerButton"
        android:drawableRight="@android:drawable/ic_menu_camera"
        android:text="@string/add_photo_button_text" />

    <TextView
        android:id="@+id/questionBodyAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/typeAnswerAA"
        android:layout_alignRight="@+id/typeAnswerAA"
        android:layout_below="@+id/questionTitleAA"
        android:layout_marginTop="22dp"
        android:text="@string/answer_parent_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/questionTitleAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/answer_parent_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

    <EditText
        android:id="@+id/typeAnswerAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_image_button"
        android:layout_alignLeft="@+id/add_image_button"
        android:layout_alignRight="@+id/add_image_button"
        android:ems="10"
        android:hint="@string/type_answer_hint_text"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>