<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AuthorQuestionActivity" >

    <!--
    - 
    <Button
        android:id="@+id/add_question_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_question_button"
        android:layout_alignLeft="@+id/submit_question_button"
        android:layout_alignRight="@+id/submit_question_button"
        android:drawableRight="@android:drawable/ic_menu_camera"
        android:text="@string/add_photo_button_text" />
    -->

    <EditText
        android:id="@+id/question_body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_question_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/question_title_text"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/add_details_hint_text"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/question_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_body_text"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/write_title_hint_text"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/add_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_question_button"
        android:layout_alignRight="@+id/question_body_text"
        android:layout_marginBottom="52dp"
        android:background="@drawable/camera_button"
        android:contentDescription="@string/camera_action"
        android:src="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/submit_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/add_image_button"
        android:layout_marginBottom="26dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="submitQuestion"
        android:text="@string/submit_button_text" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_body_text"
        android:layout_below="@+id/question_body_text"
        android:text="@string/button_cancel" />

</RelativeLayout>