<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AuthorReplyActivity" >

   <TextView
       android:id="@+id/noAccountTxt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
       android:layout_alignRight="@+id/loginField"
       android:text="@string/reply_parent_text"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textStyle="normal|bold" />

     <Button
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/fakeView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="@string/submit_button_text" />

     <EditText
         android:id="@+id/loginField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/loginButton"
         android:layout_alignParentLeft="true"
         android:layout_alignRight="@+id/loginButton"
         android:layout_below="@+id/noAccountTxt"
         android:ems="10"
         android:hint="@string/reply_comment"
         android:inputType="textMultiLine" >

     </EditText>
     
     <View
       android:id="@+id/fakeView"
       android:layout_width="0dp"
       android:layout_height="0dp" 
       android:layout_centerInParent="true"/>

     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/loginButton"
         android:layout_alignBottom="@+id/loginButton"
         android:layout_alignLeft="@+id/loginField"
         android:layout_alignRight="@+id/fakeView"
         android:text="@string/button_cancel" />

</RelativeLayout>
