<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionPageActivity" >

    <!-- http://stackoverflow.com/questions/5289536/android-listview-default-divider-styles-attributes -->

    <TextView
        android:id="@+id/question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="25dp"
        android:ems="25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/question_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_title"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@+id/view_photo_button"
        android:layout_toRightOf="@+id/overallRating"
        android:minHeight="50dp"
        android:maxLines = "8"
		android:scrollbars = "vertical"
        android:text="@string/question_body" />

    <Button
        android:id="@+id/button_add_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/answer_list"
        android:text="@string/button_add_answer" />

    <ListView
        android:id="@+id/answer_list"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_above="@+id/button_add_answer"
        android:layout_below="@+id/answers_title_text"
        android:layout_centerHorizontal="true" >

    </ListView>

    <TextView
        android:id="@+id/question_date_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/question_author_text"
        android:layout_below="@+id/question_author_text"
        android:text="@string/question_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/overallRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_title"
        android:layout_alignTop="@+id/question_body"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/question_upvotes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" 
        android:drawableTop="@drawable/arrow_up_float"/>	
	<!-- 
    <ImageButton
        android:id="@+id/button_upvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_title"
        android:layout_alignTop="@+id/question_body"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:contentDescription="@string/view_photo_description"
        android:onClick="upvote_question"
        android:src="@drawable/arrow_up_float" />
	-->
	
    <TextView
        android:id="@+id/answers_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_date_text"
        android:layout_below="@+id/answer_divider"
        android:text="@string/answers_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/question_author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/overallRating"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/question_body"
        android:text="@string/question_author" 
        android:textStyle="italic"
                />

    <View
        android:id="@+id/answer_divider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignLeft="@+id/answers_title_text"
        android:layout_below="@+id/question_date_text"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <ImageButton
        android:id="@+id/view_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/question_title"
        android:layout_alignTop="@+id/question_body"
        android:background="@null"
        android:contentDescription="@string/view_photo_description"
        android:onClick="show_photo"
        android:src="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/question_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/answer_divider"
        android:layout_alignTop="@+id/question_author_text"
        android:background="@null"
        android:contentDescription="@string/view_photo_description"
        android:onClick="favorited"
        android:src="@android:drawable/btn_star" />

</RelativeLayout>