<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/reply_author_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reply_textview"
        android:text="@string/question_adapter_author"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/reply_author_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reply_author_textview"
        android:text="@string/question_adapter_date"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/reply_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/question_adapter_title"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/reply_adapter_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/reply_author_date"
        android:layout_below="@+id/reply_author_date"
        android:text="TextView" 
        android:textStyle="italic"
        android:textSize="12sp"/>

</RelativeLayout>

